# spacetraders

./: .gitignore  main.js  package-lock.json
automation/: automation.js  contract.js  contracting.js  exploration.js  mining.js
database/: 001_systems.sql  002_ships.sql  config.js  db.js  surveys.js  systems.js
golang/: go.mod
haskell/: package.yaml  spacetraders.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: SpaceTraders.hs
haskell/src/SpaceTraders/: Database.hs  Utils.hs
haskell/src/SpaceTraders/APIClient/: Agent.hs  Client.hs  Contracts.hs  Errors.hs  Pagination.hs  Ships.hs  Systems.hs
haskell/src/SpaceTraders/ApiClient/: Agent.hs  Client.hs  Contracts.hs  Errors.hs  Pagination.hs  Ships.hs  Systems.hs
haskell/src/SpaceTraders/Automation/: Init.hs
haskell/src/SpaceTraders/Database/: 000_init.sql  Agents.hs  Contracts.hs  Ships.hs  Systems.hs  Tokens.hs  Utils.hs
haskell/src/SpaceTraders/Model/: Agent.hs  Cargo.hs  Contract.hs  Fuel.hs  Inventory.hs  Nav.hs  Route.hs  Ship.hs  System.hs  Waypoint.hs
lib/: agent.js  api.js  contracts.js  ships.js  systems.js
nodejs/: main.js  main.ts  package-lock.json  package.json  shell.nix  tsconfig.json
nodejs/automation/: agent.ts  contracting.js  contracting.ts  exploration.js  exploration.ts  init.js  init.ts  mining.js  mining.ts  selling.js  selling.ts  trading.ts  utils.js
nodejs/database/: 000_init.sql  001_systems.sql  002_ships.sql  003_surveys.sql  004_markets.sql  005_shipyards.sql  agents.js  agents.ts  contracts.js  contracts.ts  db.js  db.ts  markets.js  markets.ts  ships.js  ships.ts  shipyards.ts  surveys.js  surveys.ts  systems.js  systems.ts  tokens.js  tokens.ts
nodejs/lib/: agent.ts  api.js  api.ts  contracts.js  contracts.ts  errors.ts  priority_queue.js  priority_queue.ts  ships.js  ships.ts  systems.js  systems.ts  types.ts  utils.js  utils.ts
nodejs/model/: agent.ts  api.ts  cargo.ts  common.ts  contract.ts  errors.ts  market.ts  ship.ts  system.ts
raku/: main.raku
(+51 files in other folders)
